2009-01-19  Ray Strode  <rstrode@redhat.com>

	Emit "transitioned" not "changed" for new frames

	* gnome-bg.c (do_transitioned), (queue_transitioned),
	(gnome_bg_class_init), (on_timeout): When changing
	slideshow frames emit a different signal than when
	changing whole backgrounds, so the two cases can be
	detected.

2009-01-19  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr.c: (fill_out_screen_info): if xrandr 1.3 is available, use
	XRRGetScreenResourcesCurrent instead of XRRGetScreenResources since
	it's cheaper.
	Patch by Alberto Milone <albertomilone@alice.it>
	Fix bug #568160

2009-01-07  Vincent Untz  <vuntz@gnome.org>

	* gnome-bg.c: (gnome_bg_set_color): use gdk_color_equal() instead of
	custom colors_equal()
	Fix bug #566900

==================== 2.25.4 ====================

==================== 2.25.3 ====================

2008-12-12  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c: (crtc_assignment_new):
	* gnome-rr.c: (gnome_rr_crtc_set_config): fix translator comments, to
	really fix bug #563831.

2008-12-10  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c: (has_similar_mode): kill since it's unused and
	creates a warning

2008-12-10  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c: (crtc_assignment_new):
	* gnome-rr.c: (gnome_rr_crtc_set_config):
	Fix build, thanks to Frederic Peters <fpeters@0d.be> for the quick
	notice. Fix bug #563926 and bug #563927.

2008-12-09  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=563831

	* gnome-rr.c (gnome_rr_crtc_set_config): Make an error string more
	friendly to translation.

	* gnome-rr-config.c (crtc_assignment_new): Likewise.

2008-12-05  Vincent Untz  <vuntz@gnome.org>

	* gnome-bg.c: (get_current_slide): add assertion
	(read_slideshow_file): if there are no slides in the slideshow, do as
	if there were no slideshow at all.
	Should fix bug #522756.

2008-10-16  Federico Mena Quintero  <federico@novell.com>
