@@ -1,5 +1,10 @@
 2009-01-19  Ray Strode  <rstrode@redhat.com>
 
+	* gnome-bg.c (gnome_bg_set_pixmap_as_root): Use gdk
+	functions to grab server and flush client.
+
+2009-01-19  Ray Strode  <rstrode@redhat.com>
+
 	Emit "transitioned" not "changed" for new frames
 
 	* gnome-bg.c (do_transitioned), (queue_transitioned),
